# flair

./: .gitignore  Caddyfile  Docker-compose.yml  README.md  docker-compose.yml  docker-rebuild-cache.sh  docker-rebuild-nocache.sh  landing.html  nocache_docker-rebuild.sh  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt  run_dev.bat
backend/app/: main.py
backend/app/api/: auth.py  routes.py
backend/app/services/: auth_service.py  config.py  db.py  storage_service.py
backend/src/app/: main.py
backend/src/app/api/: auth.py  files.py  post.py  routes.py  vent_controller.py  water_controller.py
backend/src/app/domain/: models.py
backend/src/app/engineering_lib/: SP_30_table_5.2.csv  shevelev_pressure_drop.py  vent_general.py  water_consumption_sp30.py
backend/src/app/services/: auth_service.py  config.py  db.py  dxf_builder.py
backend/src/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: Dockerfile  index.html  landing.html  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/src/: main.js  style.css
frontend/src/assets/: tailwind.css
frontend/src/components/: Footer.vue  Header.vue  Hero.vue  LanguageSwitcher.vue  Navigation.vue
frontend/src/components/calculation/: CalculatorWidget.vue  DescriptionField.vue  InputField.vue  MainCalculator.vue  NameField.vue  OutputField.vue
frontend/src/pages/: BlogPage.vue  MainPage.vue
frontend/src/router/: index.ts
src/: App.vue  style.css
src/assets/: tailwind.css
src/components/: Footer.vue  Header.vue  Hero.vue  LanguageSwitcher.vue  Layout.vue  Navigation.vue
src/pages/: BlogPage.vue
src/router/: index.ts
